version/0.6/_sources/_autosummary/ansys.api.pyensight.ens_part_frame.ENS_PART_FRAME.rst.txt
ENS\_PART\_FRAME
================

.. currentmodule:: ansys.api.pyensight.ens_part_frame

.. autoclass:: ENS_PART_FRAME

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_FRAME.attrgroupinfo
      
      
      ENS_PART_FRAME.attrinfo
      
      
      ENS_PART_FRAME.attrissensitive
      
      
      ENS_PART_FRAME.attrtree
      
      
      ENS_PART_FRAME.cmdlang_rec_info
      
      
      ENS_PART_FRAME.createpart
      
      
      ENS_PART_FRAME.destroy
      
      
      ENS_PART_FRAME.get_values
      
      
      ENS_PART_FRAME.getattr
      
      
      ENS_PART_FRAME.getattrs
      
      
      ENS_PART_FRAME.getmetatag
      
      
      ENS_PART_FRAME.hasmetatag
      
      
      ENS_PART_FRAME.populate_attr_list
      
      
      ENS_PART_FRAME.realtimemode
      
      
      ENS_PART_FRAME.setattr
      
      
      ENS_PART_FRAME.setattr_begin
      
      
      ENS_PART_FRAME.setattr_end
      
      
      ENS_PART_FRAME.setattr_status
      
      
      ENS_PART_FRAME.setattrs
      
      
      ENS_PART_FRAME.setmetatag
      
      
      ENS_PART_FRAME.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_FRAME.ACTIVE
      ENS_PART_FRAME.ADJCOORDSCALEFACTOR
      ENS_PART_FRAME.ADJCOORDTRANSVEC
      ENS_PART_FRAME.ADJCOORDVARSCALEFACTOR
      ENS_PART_FRAME.ADJCOORDXVARIABLE
      ENS_PART_FRAME.ADJCOORDYVARIABLE
      ENS_PART_FRAME.ADJCOORDZVARIABLE
      ENS_PART_FRAME.ALPHABY
      ENS_PART_FRAME.ALPHABYPALETTE
      ENS_PART_FRAME.BOUNDINGREP
      ENS_PART_FRAME.CASENUMBER
      ENS_PART_FRAME.CLIP
      ENS_PART_FRAME.COLORBYPALETTE
      ENS_PART_FRAME.COLORBYRGB
      ENS_PART_FRAME.CULLELEMENTS
      ENS_PART_FRAME.DESCRIPTION
      ENS_PART_FRAME.DISPLACEBY
      ENS_PART_FRAME.DISPLACEFACTOR
      ENS_PART_FRAME.DOUBLESIDED
      ENS_PART_FRAME.DTA_BLOCK
      ENS_PART_FRAME.EDIT_TARGET
      ENS_PART_FRAME.ELTBLANKING
      ENS_PART_FRAME.ELTDEFINEDBY
      ENS_PART_FRAME.ELTFEATUREANGLE
      ENS_PART_FRAME.ELTFILTER1ACTIVE
      ENS_PART_FRAME.ELTFILTER1TESTOP
      ENS_PART_FRAME.ELTFILTER1TESTVALUE
      ENS_PART_FRAME.ELTFILTER1TESTVARCOMP
      ENS_PART_FRAME.ELTFILTER1TESTVARIABLE
      ENS_PART_FRAME.ELTFILTER1VARCOMP
      ENS_PART_FRAME.ELTFILTER1VARIABLE
      ENS_PART_FRAME.ELTFILTER2ACTIVE
      ENS_PART_FRAME.ELTFILTER2LOGICALOP
      ENS_PART_FRAME.ELTFILTER2TESTOP
      ENS_PART_FRAME.ELTFILTER2TESTVALUE
      ENS_PART_FRAME.ELTFILTER2TESTVARCOMP
      ENS_PART_FRAME.ELTFILTER2TESTVARIABLE
      ENS_PART_FRAME.ELTFILTER2VARCOMP
      ENS_PART_FRAME.ELTFILTER2VARIABLE
      ENS_PART_FRAME.ELTFILTER3ACTIVE
      ENS_PART_FRAME.ELTFILTER3LOGICALOP
      ENS_PART_FRAME.ELTFILTER3TESTOP
      ENS_PART_FRAME.ELTFILTER3TESTVALUE
      ENS_PART_FRAME.ELTFILTER3TESTVARCOMP
      ENS_PART_FRAME.ELTFILTER3TESTVARIABLE
      ENS_PART_FRAME.ELTFILTER3VARCOMP
      ENS_PART_FRAME.ELTFILTER3VARIABLE
      ENS_PART_FRAME.ELTFILTER4ACTIVE
      ENS_PART_FRAME.ELTFILTER4LOGICALOP
      ENS_PART_FRAME.ELTFILTER4TESTOP
      ENS_PART_FRAME.ELTFILTER4TESTVALUE
      ENS_PART_FRAME.ELTFILTER4TESTVARCOMP
      ENS_PART_FRAME.ELTFILTER4TESTVARIABLE
      ENS_PART_FRAME.ELTFILTER4VARCOMP
      ENS_PART_FRAME.ELTFILTER4VARIABLE
      ENS_PART_FRAME.ELTFILTER5ACTIVE
      ENS_PART_FRAME.ELTFILTER5LOGICALOP
      ENS_PART_FRAME.ELTFILTER5TESTOP
      ENS_PART_FRAME.ELTFILTER5TESTVALUE
      ENS_PART_FRAME.ELTFILTER5TESTVARCOMP
      ENS_PART_FRAME.ELTFILTER5TESTVARIABLE
      ENS_PART_FRAME.ELTFILTER5VARCOMP
      ENS_PART_FRAME.ELTFILTER5VARIABLE
      ENS_PART_FRAME.ELTFILTER6ACTIVE
      ENS_PART_FRAME.ELTFILTER6LOGICALOP
      ENS_PART_FRAME.ELTFILTER6TESTOP
      ENS_PART_FRAME.ELTFILTER6TESTVALUE
      ENS_PART_FRAME.ELTFILTER6TESTVARCOMP
      ENS_PART_FRAME.ELTFILTER6TESTVARIABLE
      ENS_PART_FRAME.ELTFILTER6VARCOMP
      ENS_PART_FRAME.ELTFILTER6VARIABLE
      ENS_PART_FRAME.ELTREPPOINTSNORMALS
      ENS_PART_FRAME.ELTREPRESENTATION
      ENS_PART_FRAME.ELTSHRINKFACTOR
      ENS_PART_FRAME.ENS_DETAILS
      ENS_PART_FRAME.ENS_KIND
      ENS_PART_FRAME.ENS_MATERIAL
      ENS_PART_FRAME.ENS_PARENT_PART
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_0
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_1
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_2
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_3
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_4
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_5
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_6
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_7
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_8
      ENS_PART_FRAME.ENS_PLIST_KEY_SEL_9
      ENS_PART_FRAME.ENS_SYMMETRY_AXIS
      ENS_PART_FRAME.ENS_SYMMETRY_COUNT
      ENS_PART_FRAME.ENS_TURBO_STAGE
      ENS_PART_FRAME.ENS_TURBO_VDIM
      ENS_PART_FRAME.ENS_TURBO_VIEW
      ENS_PART_FRAME.ENS_UNITS_LABEL
      ENS_PART_FRAME.ENTITYLABELELT
      ENS_PART_FRAME.ENTITYLABELNODE
      ENS_PART_FRAME.FILLPATTERN
      ENS_PART_FRAME.HANDLES_ENABLED
      ENS_PART_FRAME.HAS0DELEMENTS
      ENS_PART_FRAME.HAS1DELEMENTS
      ENS_PART_FRAME.HAS2DELEMENTS
      ENS_PART_FRAME.HAS3DELEMENTS
      ENS_PART_FRAME.HIDDENLINE
      ENS_PART_FRAME.HIDDENSURFACE
      ENS_PART_FRAME.IJKAXIS
      ENS_PART_FRAME.IJKAXISSCALE
      ENS_PART_FRAME.ISGROUP
      ENS_PART_FRAME.LIGHTAMBIENT
      ENS_PART_FRAME.LIGHTDIFFUSE
      ENS_PART_FRAME.LIGHTEMISSIVE
      ENS_PART_FRAME.LIGHTREFRACTION
      ENS_PART_FRAME.LIGHTSPECULARINTENSITY
      ENS_PART_FRAME.LIGHTSPECULARREFLECTION
      ENS_PART_FRAME.LIGHTSPECULARSHINE
      ENS_PART_FRAME.LIGHTSPECULARTINT
      ENS_PART_FRAME.LINESTYLE
      ENS_PART_FRAME.LINEWIDTH
      ENS_PART_FRAME.LPARTPARENT
      ENS_PART_FRAME.MATERIALBASETYPE
      ENS_PART_FRAME.MATERIALDESCRIPTION
      ENS_PART_FRAME.MESHTYPE
      ENS_PART_FRAME.METADATA
      ENS_PART_FRAME.MIRRORORIGINAL
      ENS_PART_FRAME.NODEDETAIL
      ENS_PART_FRAME.NODERANGESTEPI
      ENS_PART_FRAME.NODERANGESTEPJ
      ENS_PART_FRAME.NODERANGESTEPK
      ENS_PART_FRAME.NODESCALE
      ENS_PART_FRAME.NODESIZEBY
      ENS_PART_FRAME.NODETYPE
      ENS_PART_FRAME.NODEVARIABLE
      ENS_PART_FRAME.OPAQUENESS
      ENS_PART_FRAME.PARENT
      ENS_PART_FRAME.PARTNUMBER
      ENS_PART_FRAME.PARTNUMELE
      ENS_PART_FRAME.PARTNUMELECLIENT
      ENS_PART_FRAME.PARTTYPE
      ENS_PART_FRAME.PARTTYPEENUM
      ENS_PART_FRAME.PATHNAME
      ENS_PART_FRAME.PERIODICSECTIONS
      ENS_PART_FRAME.PREDEFINEDMATERIAL
      ENS_PART_FRAME.PROJECT_MASK
      ENS_PART_FRAME.REDUCEPOLYGONS
      ENS_PART_FRAME.REDUCEPOLYGONSFACTOR
      ENS_PART_FRAME.REFFRAME
      ENS_PART_FRAME.RENDERINGREFLECTIONID
      ENS_PART_FRAME.REVERSENORMAL
      ENS_PART_FRAME.SELECTED
      ENS_PART_FRAME.SHADING
      ENS_PART_FRAME.SHOWSFT
      ENS_PART_FRAME.SOURCES
      ENS_PART_FRAME.SPECIFYSYMMETRYORIGIN
      ENS_PART_FRAME.SYMMETRYANGLE
      ENS_PART_FRAME.SYMMETRYAXIS
      ENS_PART_FRAME.SYMMETRYDELTA
      ENS_PART_FRAME.SYMMETRYMIRRORX
      ENS_PART_FRAME.SYMMETRYMIRRORXY
      ENS_PART_FRAME.SYMMETRYMIRRORXYZ
      ENS_PART_FRAME.SYMMETRYMIRRORXZ
      ENS_PART_FRAME.SYMMETRYMIRRORY
      ENS_PART_FRAME.SYMMETRYMIRRORYZ
      ENS_PART_FRAME.SYMMETRYMIRRORZ
      ENS_PART_FRAME.SYMMETRYORIGIN
      ENS_PART_FRAME.SYMMETRYRINSTANCES
      ENS_PART_FRAME.SYMMETRYTYPE
      ENS_PART_FRAME.TEXTURECOORDTYPE
      ENS_PART_FRAME.TEXTUREINTERPOLATION
      ENS_PART_FRAME.TEXTUREMODE
      ENS_PART_FRAME.TEXTUREOBJECT
      ENS_PART_FRAME.TEXTUREORIGIN
      ENS_PART_FRAME.TEXTUREORIGINNODEID
      ENS_PART_FRAME.TEXTUREORIGINUSE
      ENS_PART_FRAME.TEXTUREREPEATMODE
      ENS_PART_FRAME.TEXTURESORIGINNODEID
      ENS_PART_FRAME.TEXTURESVARIABLE
      ENS_PART_FRAME.TEXTURESVECTOR
      ENS_PART_FRAME.TEXTURETORIGINNODEID
      ENS_PART_FRAME.TEXTURETVARIABLE
      ENS_PART_FRAME.TEXTURETVECTOR
      ENS_PART_FRAME.UUID
      ENS_PART_FRAME.VIEWPORTVIS
      ENS_PART_FRAME.VISIBILITYELT
      ENS_PART_FRAME.VISIBILITYLINE
      ENS_PART_FRAME.VISIBILITYNODE
      ENS_PART_FRAME.VISIBLE
      ENS_PART_FRAME.VOLUMEQUALITY
      ENS_PART_FRAME.VOLUMERENDERINGTYPE
      ENS_PART_FRAME.__OBJID__
      ENS_PART_FRAME.objid
   
   